# ksahrms

./: .gitignore  MANIFEST.in  README.md  license.txt  package.json  pyproject.toml
docs/: CONTROL_BOUNDARIES.md  FIRST_SLICE_TEST_PLAN.md  IMPLEMENTATION_BACKLOG.md  IMPLEMENTED_SLICE_01.md  MIGRATION_STRATEGY.md  PROCESS_ARCHITECTURE.md  PROCESS_LIFECYCLE_MATRIX.md  READINESS_GATES.md  START_HERE_AFTER_INSTALL.md  WORKFLOW_APPROVAL_NOTIFICATION_STRATEGY.md
docs/blueprints/: accrual_to_journal.json  exit_to_settlement.json  hire_to_join.json  request_to_approval.json  time_to_pay.json
ksa_hr_platform/: hooks.py  modules.txt
ksa_hr_platform/accruals_finance/: README.md
ksa_hr_platform/accruals_finance/doctype/accrual_policy/: accrual_policy.json  accrual_policy.py
ksa_hr_platform/analytics_compliance/: README.md
ksa_hr_platform/api/: employee_service_request.py
ksa_hr_platform/attendance_time/: README.md
ksa_hr_platform/config/: desktop.py
ksa_hr_platform/employee_services/: README.md
ksa_hr_platform/hr_settings/: README.md
ksa_hr_platform/leave_benefits/: README.md
ksa_hr_platform/offboarding_settlement/: README.md
ksa_hr_platform/payroll_compensation/: README.md
ksa_hr_platform/public/css/: ksa_hr_platform.css
ksa_hr_platform/public/js/: ksa_hr_platform.js
ksa_hr_platform/recruitment_onboarding/: README.md
ksa_hr_platform/services/: approval_engine.py  notification_service.py
ksa_hr_platform/setup/: install.py  migrate.py  onboarding.py  workspace_cards.py
ksa_hr_platform/tasks/: daily.py
ksa_hr_platform/workforce_core/: README.md
(+33 files in other folders)
